adding images and some updates

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <body>
      <h1>Madrid</h1>
     <strong>
-      <p>Monday</p>
+      <p>Monday  11 °<i class="fa-solid fa-cloud"></i></p>
     </strong>
-
+<span id="current-date">
+  
+</span>
     <div class="container-fluid"> 
          11 ° clouds
     <i class="fa-solid fa-cloud cloud-icon"></i>
